# learn-rust

./: README.md
adder/src/: lib.rs
catsay/: Cargo.toml  stderr.txt  stdout.txt
catsay/src/: catfile.txt  main.rs
error-handling/src/: main.rs
formatting/src/: main.rs
game/: Cargo.toml
game/src/: main.rs  ws.rs
generic-types/src/: main.rs
hello-wasm/: .gitignore  Cargo.toml
hello-wasm/site/: index.js  package-lock.json  package.json
hello/src/: main.rs
lifetime/src/: main.rs
rectangles/src/: main.rs
restaurant/src/: lib.rs
rpc/: Cargo.toml  main.rs
rpc/src/: main.rs
server/: Cargo.toml
strings/src/: main.rs
tetris/: Cargo.toml  README.md
tetris/src/: shape.rs  tetris.rs
