[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Mihail Gaberov <mihail.gaberov@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/mihailgaberov/learn-rust/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
